fix: fix search tool-tip issues where z-index is not correct and hide the tooltip info in some cases.

--- a/core/search/css/search.less
+++ b/core/search/css/search.less
@@ -16,6 +16,11 @@
 		flex: 0 1 32.8%;
 		flex-wrap: wrap;
 
+		// allow to view tooltip over other components
+		&:hover {
+			z-index: 2;
+		}
+
 		>.wrapper_component {
 			flex-grow: 1;
 			display: grid;
